Fixing HTML and CSS readability for sidebar

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -12,7 +12,7 @@ svg {
   height: 1.25rem;
   fill: white;
 }
-/* #242729 */
+
 body {
   background-color: #393e41;
   height: 100vh;
@@ -32,64 +32,57 @@ header {
   font-weight: 600;
 }
 
-/****************** SIDEBAR ******************/
-#sidebar {
-  background-color: #242729;
+.sidebar {
   grid-column: 1;
   grid-row: 2 / -1;
   display: flex;
   flex-direction: column;
   gap: 5rem;
+
+  background-color: #242729;
   padding: 1rem;
 }
 
-#menu {
+.sidebar-list {
   display: flex;
   flex-direction: column;
 }
 
-#menu .menu-item,
-#projects .project-item {
+.sidebar-item {
   padding: 0.35rem 0.5rem;
 }
 
-#menu .menu-link,
-#projects .project-link {
-  font-size: 1rem;
-}
-
-#menu .menu-item:hover,
-#projects .project-item:hover {
+.sidebar-item:hover {
   background-color: #474d50;
   border-radius: 4px;
   cursor: pointer;
 }
 
-#menu .menu-link,
-#projects .project-link {
+.sidebar-link {
   display: flex;
-  gap: 0.5rem;
   align-items: center;
+  gap: 0.5rem;
+  font-size: 1rem;
 }
 
-#projects #project-bar {
+.sidebar-link--bar {
   display: flex;
   justify-content: space-between;
 }
 
-#projects #project-bar svg {
-  opacity: 0;
+.sidebar-link--bar svg {
   width: 1.5rem;
   height: 1.5rem;
   padding: 2px;
   border-radius: 4px;
+  opacity: 0;
 }
 
-#projects #project-bar:hover svg {
+.sidebar-link--bar:hover svg {
   opacity: 1;
 }
 
-#projects #project-bar svg:hover {
+.sidebar-link--bar svg:hover {
   background-color: rgba(107, 114, 119, 1);
 }
 
@@ -215,16 +208,70 @@ dialog::backdrop {
   padding-bottom: 1rem;
 }
 
-.form-container select {
-  padding: 0.5rem 0.75rem;
-  border-radius: 4px;
-  border: 1px solid white;
-  background-color: transparent;
-  outline: none;
+.form-container .details {
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+}
 
-  color: white;
-  font-weight: 600;
+.details .dropdown {
+  display: flex;
+  flex-direction: column;
+  gap: 0.25rem;
+  position: relative;
   cursor: pointer;
+}
+
+.dropdown:hover #dropdown-list {
+  opacity: 1;
+  visibility: visible;
+}
+
+.details #dropdown-select {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #acacac;
+  border-radius: 4px;
+  width: 90px;
+  padding: 0.25rem;
+  font-size: 0.75rem;
+}
+
+.details #dropdown-list {
+  background-color: #242729;
+  border: 1px solid #4d4a4a;
+  border-radius: 4px;
+  font-size: 0.75rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 110%;
+  left: 0;
+  right: 0;
+  opacity: 0;
+  visibility: hidden;
+  transform: opacity 0.2s linear, visibility 0.2s linear;
+}
+
+.details .dropdown-option {
+  width: 90px;
+  text-align: center;
+  padding: 0.25rem;
+}
+
+.details .dropdown-option:first-child:hover {
+  border-radius: 4px 4px 0px 0px;
+}
+
+.details .dropdown-option:last-child:hover {
+  border-radius: 0px 0px 4px 4px;
+}
+
+.details .dropdown-option:hover {
+  background-color: #474d50;
 }
 
 .form-container .buttons {
